Created new module 'base'

--- a/templates/adoption/add_adoptable_animal.html
+++ b/templates/adoption/add_adoptable_animal.html
@@ -1,5 +1,5 @@
 <!-- rescue/templates/rescue/add_adoptable_animal.html -->
-{% extends 'rescue/base.html' %}  <!-- Adjust the path if your base.html is located elsewhere -->
+{% extends 'base/base.html' %}  <!-- Adjust the path if your base.html is located elsewhere -->
 {% load static %}  <!-- Load static files if needed -->
 
 {% block content %}
