--- a/templates/rescue/rescued_animals_today.html
+++ b/templates/rescue/rescued_animals_today.html
@@ -1,5 +1,5 @@
 <!-- rescue/templates/rescue/rescued_animals_today.html -->
-{% extends 'rescue/base.html' %}
+{% extends 'base/base.html' %}
 
 {% block content %}
 <div class="container mt-4">
