--- a/templates/rescue/volunteer_dashboard.html
+++ b/templates/rescue/volunteer_dashboard.html
@@ -1,5 +1,5 @@
 <!-- templates/volunteer_dashboard.html -->
-{% extends 'rescue/base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 {% block extra_head %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
