--- a/templates/donation/donation_success.html
+++ b/templates/donation/donation_success.html
@@ -1,4 +1,4 @@
-{% extends 'rescue/base.html' %}
+{% extends 'base/base.html' %}
 {% block content %}
 <div class="container mt-4">
     <h2>Thank You for Your Donation!</h2>
