--- a/templates/registration/password_reset.html
+++ b/templates/registration/password_reset.html
@@ -1,5 +1,5 @@
 <!-- templates/registration/password_reset.html -->
-{% extends 'rescue/base.html' %}
+{% extends 'base/base.html' %}
 
 {% block content %}
 <div class="row justify-content-center">
