--- a/templates/rescue/animal_list.html
+++ b/templates/rescue/animal_list.html
@@ -1,4 +1,4 @@
-{% extends 'rescue/base.html' %}
+{% extends 'base/base.html' %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
