--- a/templates/rescue/user_dashboard.html
+++ b/templates/rescue/user_dashboard.html
@@ -64,7 +64,7 @@
 
 {% block additional_js %}
    <!-- Add Bootstrap JS -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script> -->
    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
    <script src="{% static 'js/user_dashboard.js' %}" defer></script>
 {% endblock %}
