--- a/templates/landing_page/landing_page.html
+++ b/templates/landing_page/landing_page.html
@@ -11,10 +11,10 @@
 <!-- Hero Section -->
 <section class="hero-section">
     <div class="slideshow">
-        <img src="{% static 'images/hero1.gif' %}" alt="Hero Image 1" class="slide">
-        <img src="{% static 'images/hero2.gif' %}" alt="Hero Image 2" class="slide">
-        <img src="{% static 'images/hero3.gif' %}" alt="Hero Image 3" class="slide">
-        <img src="{% static 'images/hero4.gif' %}" alt="Hero Image 4" class="slide">
+        <img src="{% static 'images/hero1.jpg' %}" alt="Hero Image 1" class="slide">
+        <img src="{% static 'images/hero2.jpg' %}" alt="Hero Image 2" class="slide">
+        <img src="{% static 'images/hero3.jpg' %}" alt="Hero Image 3" class="slide">
+        <img src="{% static 'images/hero4.jpg' %}" alt="Hero Image 4" class="slide">
     </div>
     <div class="container">
         <h1 class="animate__animated animate__fadeInDown">Welcome to Wesalvatore</h1>
@@ -28,11 +28,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="slideshow" style="border: 2px solid red;">
-                    <img src="{% static 'images/who1.gif' %}" alt="Who We Are Image 1" class="slide">
-                    <img src="{% static 'images/who2.gif' %}" alt="Who We Are Image 2" class="slide">
-                    <img src="{% static 'images/who3.gif' %}" alt="Who We Are Image 3" class="slide">
-                    <img src="{% static 'images/who4.gif' %}" alt="Who We Are Image 4" class="slide">
+                <div class="slideshow">
+                    <img src="{% static 'images/who1.jpg' %}" alt="Who We Are Image 1" class="slide">
+                    <img src="{% static 'images/who2.jpg' %}" alt="Who We Are Image 2" class="slide">
+                    <img src="{% static 'images/who3.jpg' %}" alt="Who We Are Image 3" class="slide">
+                    <img src="{% static 'images/who4.jpg' %}" alt="Who We Are Image 4" class="slide">
                 </div>
             </div>
             <div class="col-md-6">
