--- a/static/css/style.css
+++ b/static/css/style.css
@@ -538,3 +538,24 @@ html body {
 .scanner-section {
     width: 100%;
 }
+
+/* styling for select language dropdown  */
+
+/* Styling the grandchild dropdown of google_translate_element */
+#google_translate_element > div > div{
+  background-color: #000000; /* Pure black background */
+  color: #ffffff; /* White text for contrast */
+  font-family: Arial, sans-serif;
+  border: 1px solid #ffffff; /* Subtle white border */
+  padding: 10px 14px;
+  border-radius: 8px;
+  font-size: 16px;
+  width: 100%;
+  box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2); /* Light white shadow */
+  appearance: none; /* Removes default arrow styling */
+  outline: none;
+  cursor: pointer;
+}
+#google_translate_element span{
+    color: white !important;
+}
