--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -513,3 +513,25 @@ textarea.form-control {
 .btn {
     width: 100%;
 }
+/* Removing google logo image..  */
+#google_translate_element img
+, .skiptranslate>iframe 
+{
+    display: none;
+}
+
+html body {
+    position: static !important; /* Override the position */
+    min-height: auto !important; /* Override min-height */
+    top: 0 !important; /* Override top */
+}
+
+
+.hero-cta a {
+    width: 90%;
+}
+
+.hero-section,
+.scanner-section {
+    width: 100%;
+}
