--- a/templates/landing_page/landing_page.html
+++ b/templates/landing_page/landing_page.html
@@ -104,7 +104,7 @@
     <div class="container text-center">
         <h2>Support Our Mission</h2>
         <p>Your donation helps rescue, shelter, and find homes for animals in need.</p>
-        <a href="http://127.0.0.1:8000/donation/organizations/" class="btn btn-primary btn-lg">Donate Now</a>
+        <a href="http://144.24.122.171/donation/organizations/" class="btn btn-primary btn-lg">Donate Now</a>
     </div>
 </section>
 {% endblock %}
